# kiss

./: .editorconfig  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Messages.sh  README.md  config-kiss.h.cmake
Examples/Fedora/: doit.sh  fedora-kde-common.ks  fedora-live-base.ks  fedora-livecd-kde.ks
KDEInitialSystemSetup/: CMakeLists.txt  org.kde.initialsystemsetup.gschema.xml  org.kde.initialsystemsetup.service.in
KDEInitialSystemSetup/DBusProtocols/: org.freedesktop.Accounts.Service.xml  systemd.xml
KDEInitialSystemSetup/Resources/: Main.qml  MobileMain.qml  Resources.qrc  Screen.qml
KDEInitialSystemSetup/Resources/pages/locale/: Page.qml
KDEInitialSystemSetup/Resources/pages/ready/: Page.qml
KDEInitialSystemSetup/Resources/pages/user/: Page.qml
KDEInitialSystemSetup/Sources/: KISS.cpp  KISS.h  Main.cpp  Settings.cpp  Settings.h  systemd.h
KDEInitialSystemSetup/Sources/DisplayManagerBackends/: SDDM.h
examples/Fedora/: fedora-kde-minimization.ks  fedora-repo-rawhide.ks
files/: CMakeLists.txt  kde-initial-system-setup-first-run.service.in  kde-initial-system-setup-force-run.service.in  kde-initial-system-setup-polkit.rules  kde-initial-system-setup-sysuser.conf  kde-initial-system-setup-tmpfiles.conf.in  kde-initial-system-setup.desktop.in  kde-initial-system-setup.service.in  polkit.rules  systemd-first-run.service.in  systemd-first-run.sh  tmpfiles.conf
files/polkit-1/rules.d/: kde-initial-system-setup.rules
modules/: CMakeLists.txt
modules/account/: CMakeLists.txt  metadata.json
modules/account/contents/ui/: main.qml
modules/cellular/: metadata.json
modules/cellular/contents/ui/: main.qml
modules/finished/: CMakeLists.txt  metadata.json
modules/finished/contents/ui/: main.qml
modules/keyboard/: CMakeLists.txt  keyboardutil.cpp  keyboardutil.h  metadata.json
modules/keyboard/contents/ui/: main.qml
modules/language/: CMakeLists.txt  languageutil.cpp  languageutil.h  metadata.json
modules/language/contents/ui/: main.qml
modules/password/: CMakeLists.txt  metadata.json
modules/password/contents/ui/: main.qml
modules/prepare/: CMakeLists.txt  metadata.json  prepareutil.cpp  prepareutil.h
modules/prepare/contents/ui/: main.qml
modules/prepare/package/: metadata.json
modules/screenbrightnessplugin/: CMakeLists.txt  screenbrightnessutil.cpp
modules/time/: CMakeLists.txt  metadata.json  timeutil.cpp  timeutil.h  timezonemodel.cpp
modules/time/contents/ui/: main.qml
modules/wifi/: CMakeLists.txt  metadata.json
modules/wifi/contents/ui/: ConnectDialog.qml  ConnectionItemDelegate.qml  PasswordField.qml  main.qml
po/ar/: org.kde.initialsystemsetup.po
po/ca/: org.kde.initialsystemsetup.po
po/ca@valencia/: org.kde.initialsystemsetup.po
po/cs/: org.kde.initialsystemsetup.po
po/de/: org.kde.initialsystemsetup.po
po/en_GB/: org.kde.initialsystemsetup.po
po/es/: org.kde.initialsystemsetup.po
po/eu/: org.kde.initialsystemsetup.po
po/fi/: org.kde.initialsystemsetup.po
po/fr/: org.kde.initialsystemsetup.po
po/gl/: org.kde.initialsystemsetup.po
po/he/: org.kde.initialsystemsetup.po
po/ia/: org.kde.initialsystemsetup.po
po/it/: org.kde.initialsystemsetup.po
po/ka/: org.kde.initialsystemsetup.po
po/ko/: org.kde.initialsystemsetup.po
po/lt/: org.kde.initialsystemsetup.po
po/nl/: org.kde.initialsystemsetup.po
po/nn/: org.kde.initialsystemsetup.po
po/pl/: org.kde.initialsystemsetup.po
po/pt_BR/: org.kde.initialsystemsetup.po
po/sk/: org.kde.initialsystemsetup.po
po/sl/: org.kde.initialsystemsetup.po
po/sv/: org.kde.initialsystemsetup.po
po/tr/: org.kde.initialsystemsetup.po
po/uk/: org.kde.initialsystemsetup.po
po/zh_CN/: org.kde.initialsystemsetup.po
po/zh_TW/: org.kde.initialsystemsetup.po
scripts/: rebuild-dev.sh  rebuild-kiss.sh
src/: CMakeLists.txt  accountcontroller.cpp  accountcontroller.h  backend.h  controller.cpp  controller.h  displayutil.cpp  displayutil.h  initialstart.cpp  initialstart.h  initialstartutil.cpp  initialstartutil.h  initialsystemsetup.kcfgc  keyboardutil.cpp  keyboardutil.h  kiss.cpp  kiss.h  main.cpp  org.freedesktop.timedate1.xml  org.kde.initialsystemsetup.gschema.xml  org.kde.initialsystemsetup.kcfg  org.kde.initialsystemsetup.service.in  pagesmodel.cpp  pagesmodel.h  resources.qrc  settings.cpp  settings.h  systemd.h  timeutil.cpp  timeutil.h  timezonemodel.cpp  timezonemodel.h  user.cpp  user.h
src/auth/: CMakeLists.txt  authhelper.cpp  authhelper.h  org.kde.initialsystemsetup.actions  org.kde.kiss.actions
src/bootutil/: CMakeLists.txt  bootutil.cpp  bootutil.h  main.cpp
src/components/: CMakeLists.txt  Module.qml  initialstartmodule.cpp  initialstartmodule.h  setupmodule.cpp  setupmodule.h
src/content/: LicensePage.qml  LocalePage.qml  MobileMain.qml  ReadyPage.qml  UserPage.qml  main.qml
src/displaymanagerbackends/: SDDM.h
src/packagestructure/: CMakeLists.txt  kde-initialsystemsetup-packagestructure.json  kdeinitialsystemsetuppackage.cpp  kdeinitialsystemsetuppackage.h  plasma-initialstart-packagestructure.json  plasmainitialstartpackage.cpp  plasmainitialstartpackage.h
src/pages/: CMakeLists.txt  localepage.cpp  localepage.h  readypage.cpp  readypage.h
src/pages/account/: CMakeLists.txt  accountcontroller.cpp  accountcontroller.h  metadata.json
src/pages/account/contents/ui/: main.qml
src/plugins/: CMakeLists.txt  ipage.cpp  ipage.h  pageloader.cpp  pageloader.h
src/plugins/license/: CMakeLists.txt  initialsystemsetuplicense.kcfgc  licensepage.cpp  licensepage.h  licensepage.qrc  org.kde.initialsystemsetup.license.kcfg  page_license.json
src/plugins/license/content/: LicensePage.qml
src/plugins/sample/: CMakeLists.txt  page_sample.json  samplepage.cpp  samplepage.h  samplepage.qrc
src/plugins/sample/content/: SamplePage.qml
src/plugins/users/: CMakeLists.txt  page_user.json  userpage.cpp  userpage.h  userpage.qrc
src/plugins/users/content/: UserPage.qml
src/plugins/users/dbus/: org.freedesktop.Accounts.User.xml
src/qml/: LandingComponent.qml  Main.qml  Wizard.qml
